--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,34 +1,18 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en" data-bs-theme="dark">
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout.html}">
 <head>
     <title>Please login</title>
-    <link th:replace="~{fragments/bootstrap.html}">
+    <style>
+        .bg-image {
+            background-image: url('https://images.pexels.com/photos/807598/pexels-photo-807598.jpeg');
+            background-size: cover;
+            background-position: center;
+        }
+    </style>
 </head>
 
-<style>
-    .login {
-        min-height: 100vh;
-    }
-
-    .bg-image {
-        background-image: url('https://images.pexels.com/photos/807598/pexels-photo-807598.jpeg');
-        background-size: cover;
-        background-position: center;
-    }
-
-    .login-heading {
-        font-weight: 300;
-    }
-
-    .btn-login {
-        font-size: 0.9rem;
-        letter-spacing: 0.05rem;
-        padding: 0.75rem 1rem;
-    }
-</style>
-
-<body>
-
+<body layout:fragment="content">
 <main class="container-fluid ps-md-0">
     <div class="row g-0">
         <div class="d-none d-md-flex col-md-4 col-lg-6 bg-image position-relative">
@@ -38,27 +22,32 @@
         </div>
         <div class="col-md-8 col-lg-6 shadow-lg border-start position-relative">
 
-            <div th:if="${#ctx.containsVariable('signupSuccess')}" class="position-absolute bottom-0 start-50 translate-middle-x py-5">
+            <div th:if="${#ctx.containsVariable('signupSuccess')}"
+                 class="position-absolute bottom-0 start-50 translate-middle-x py-5">
                 <div class="alert alert-light" role="alert">
                     Account created. Please sign in.
                 </div>
             </div>
 
-            <div class="login d-flex align-items-center py-5 bg-secondary-subtle">
+            <div class="min-vh-100 d-flex align-items-center py-5 bg-secondary-subtle">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-9 col-lg-8 mx-auto">
 
-                            <h3 class="login-heading mb-4">Welcome back!</h3>
+                            <h3 class="mb-4">Welcome back!</h3>
 
                             <form th:action="@{/login}" method="post">
                                 <div class="form-floating mb-3">
-                                    <input type="text" class="form-control" th:classappend="${param.error} ? 'is-invalid' : ''" id="floatingInput" placeholder="name" name="username">
-                                    <label for="floatingInput" >Username</label>
+                                    <input type="text" class="form-control"
+                                           th:classappend="${param.error} ? 'is-invalid' : ''" id="floatingInput"
+                                           placeholder="name" name="username">
+                                    <label for="floatingInput">Username</label>
                                 </div>
 
                                 <div class="form-floating mb-3">
-                                    <input type="password" class="form-control" th:classappend="${param.error} ? 'is-invalid' : ''" id="floatingPassword" placeholder="Password" name="password">
+                                    <input type="password" class="form-control"
+                                           th:classappend="${param.error} ? 'is-invalid' : ''" id="floatingPassword"
+                                           placeholder="Password" name="password">
                                     <label for="floatingPassword">Password</label>
                                     <div class="invalid-feedback">
                                         Invalid Username and Password combination
@@ -66,7 +55,9 @@
                                 </div>
 
                                 <div class="d-grid">
-                                    <button class="btn btn-lg btn-success btn-login text-uppercase fw-bold mb-2" type="submit">Sign in</button>
+                                    <button class="btn btn-lg btn-success btn-bold text-uppercase fw-bold mb-2"
+                                            type="submit">Sign in
+                                    </button>
                                     <div class="text-center">
                                         <a class="small" th:href="@{/signup}">New Here? <strong>Register</strong></a>
                                     </div>
@@ -80,7 +71,5 @@
         </div>
     </div>
 </main>
-
 </body>
-
 </html>
