--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,7 +9,7 @@
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li sec:authorize="isAuthenticated()"><a th:href="@{/users}" class="nav-link px-2 text-white text-uppercase fw-bold">Users</a></li>
-                <li sec:authorize="isAuthenticated()"><a href="#" class="nav-link px-2 text-white text-uppercase fw-bold">Promotion</a></li>
+                <li sec:authorize="isAuthenticated()"><a th:href="@{/other}" class="nav-link px-2 text-white text-uppercase fw-bold">Other</a></li>
             </ul>
 
             <div sec:authorize="isAnonymous()" class="text-end">
