--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
 </head>
 <body layout:fragment="main">
 
-<div class="flex-grow d-flex align-items-center position-relative no-header">
+<div class="flex-grow d-flex align-items-center position-relative content">
     <div class="w-100 h-100 bg-image position-absolute" style="z-index: -1"></div>
 
     <div class="text-center text-light col-md-8 offset-md-2">
