--- a/src/main/resources/templates/content.html
+++ b/src/main/resources/templates/content.html
@@ -1,7 +1,7 @@
 <div xmlns:th="http://www.thymeleaf.org" class="card mb-3 shadow bg-body-tertiary" style="max-width: 540px;">
     <div class="row rounded overflow-hidden g-0">
         <div class="col-md-4"
-             style="background-size: cover; background-image: url('https://img.freepik.com/fotos-kostenlos/blatt-natur-hintergruende-muster-illustration-pflanze-hintergrund-design-abstrakt-eine-lebendige-gruene-natur-tapete-illustration-generative-ai_188544-12680.jpg?w=2000&t=st=1707773619~exp=1707774219~hmac=50c6c95a0a9733956906d2ab10e27a0df7a5a7752d6b400c775996a6d11c1858')">
+             style="background-size: cover; background-image: url('https://cdn.pixabay.com/photo/2016/07/05/16/53/leaves-1498985_960_720.jpg')">
         </div>
         <div class="col-md-8">
             <div class="card-body">
