--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -38,7 +38,7 @@
                                                    id="floatingInput" placeholder="username" th:field="*{username}">
                                             <label for="floatingInput">Username</label>
                                             <div th:if="${#fields.hasErrors('username')}"
-                                                 class="invalid-feedback text-capitalize" th:errors="*{username}"></div>
+                                                 class="invalid-feedback" th:errors="*{username}"></div>
                                         </div>
                                     </div>
 
@@ -49,7 +49,7 @@
                                                    id="floatingEmail" placeholder="email" th:field="*{email}">
                                             <label for="floatingEmail">Email</label>
                                             <div th:if="${#fields.hasErrors('email')}"
-                                                 class="invalid-feedback text-capitalize" th:errors="*{email}"></div>
+                                                 class="invalid-feedback" th:errors="*{email}"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -61,7 +61,7 @@
                                                id="floatingPassword" placeholder="password" th:field="*{password}">
                                         <label for="floatingPassword">Password</label>
                                         <div th:if="${#fields.hasErrors('password')}"
-                                             class="invalid-feedback text-capitalize" th:errors="*{password}"></div>
+                                             class="invalid-feedback" th:errors="*{password}"></div>
                                     </div>
                                 </div>
 
