--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<footer class="w-100 py-4 flex-shrink-0 bg-secondary-subtle z-3 footer">
+    <div class="container py-2">
+        <!--/*@thymesVar id="currentYear" type="java.lang.Integer"*/-->
+        <p class="small text-muted mb-0" th:text="'&copy; Copyright ' + ${currentYear}"></p>
+    </div>
+</footer>
