--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:sec="http://www.w3.org/1999/xhtml"
-      layout:decorate="~{main}">
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{main}">
 <head>
     <title>Home</title>
     <style>
         .bg-image {
             background: #444 url(https://images.pexels.com/photos/1367192/pexels-photo-1367192.jpeg) no-repeat center;
             background-size: cover;
-            filter: blur(6px);
+            filter: blur(2px);
         }
     </style>
 </head>
